# WinLog

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  LICENSE  README.md  bar_2CMakeLists_8txt.html  bar_8cc.html  bar_8cc__incl.dot  bar_8h.html  bar_8h__dep__incl.dot  bar_8h_source.html  dir_30e578e9932b449dc064e1f38e5a91d8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97ad83a8c99cd02dc7c96faabd2cafb3.html  dir_e488ee1cea97fb16abdb5ccc78d2123b.html  files.html  foo_2CMakeLists_8txt.html  foo_8cc.html  foo_8cc__incl.dot  foo_8h.html  foo_8h__dep__incl.dot  foo_8h_source.html  globals_func.html  globals_vars.html  render_2CMakeLists_8txt.html  render_8cpp.html  render_8cpp__incl.dot  render_8hpp.html  render_8hpp__dep__incl.dot  render_8hpp__incl.dot  render_8hpp_source.html  vcpkg.json
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js
src/: CMakeLists.txt
